# lex

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  DEEP_RESEARCH_TOOL_UX_PLAN.md  LICENSE  Makefile  PERFORMANCE_ANALYSIS.md  README.md  docker-compose.yaml  mcp_config.json  pyproject.toml  test-mcp-server.sh
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/lex-uk-law/: SKILL.md
.github/: .github.env  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  question.md
.github/actions/cache-and-install-deps/: action.yml
.github/workflows/: linting.yml  release.yml
analysis/: README.md  __init__.py  base_analyzer.py  check_pipeline_status.py  check_recent_logs.py  check_structured_logging.py  common_utils.py  error_type_analyzer.py  explanatory_note_analyzer.py  explanatory_notes_analyzer.py  extract_failed_xml_urls.py  find_failed_documents.py  investigate_document_types.py  non_pdf_error_analyzer.py  pipeline_monitoring.py  processing_performance_analyzer.py  run_all_analyses.py  uksi_comprehensive_analysis.py  xml_completeness_analyzer.py  xml_completeness_comprehensive.py
app/: README.md  eslint.config.mjs  instrumentation.ts  next.config.ts  package.json  tsconfig.json
data/: pdf_only_legislation_complete.csv  pdf_sample_1920_1960.csv
docs/: DEEP_RESEARCH_TOOL_UX_PLAN.md  README.md  data-models.md  dataset-statistics.md  deployment.md  handover-plan.md  ingestion-process.md  legislation-gov-uk-api.md  operations-runbook.md  pdf-dataset.md  qdrant-hosting.md  search-architecture.md  system-architecture.md  troubleshooting.md  uk-legal-system.md  year-recovery.md
infrastructure/azure/: README.md  api-definition.json  api-policies.xml  deploy.sh  main.bicep  mcp-server-policy.xml  stage2.bicep
scripts/: _console.py  audit_data_coverage.py  backfill_amendment_explanations.py  benchmark_frontend_processing.html  benchmark_legislation_proxy.py  bulk_export_parquet.py  bulk_search_qdrant.py  check_pdf_progress.py  create_payload_indexes.py  discover_pdf_legislation.py  enable_quantization.py  fix_nested_text_schema.py  fix_uri_formats.py  generate_valid_pdf_sample.py  migrate_es_to_qdrant.py  process_pdfs.py  profile_search_endpoints.py  regenerate_all_summaries.py  regenerate_pdf_csv.py  setup_azure_storage.py  test_search_performance.py
scripts/maintenance/: enable_quantization.py  fix_nested_text_schema.py  fix_null_years.py  fix_section_metadata.py  fix_uri_formats.py
scripts/pdf/: check_pdf_progress.py  discover_pdf_legislation.py  process_pdfs.py
src/backend/: Dockerfile  README.md  main.py  monitoring.py
src/lex/: Dockerfile  README.md  main.py  settings.py
tests/: conftest.py
tests/backend/: test_amendment.py  test_caselaw.py  test_explanatory_note.py  test_legislation.py  test_rate_limiting.py
tests/lex/: test_amendment.py  test_caselaw.py  test_explanatory_note.py  test_legislation.py  test_pipeline_integration.py  test_regnal_years.py
tests/test_data/: ewfc_2017_83.xml  ewhc_admin_2017_3364.xml  ewhc_admin_2017_3409.xml  ewhc_ch_2017_3397.xml  ewhc_ch_2017_3414.xml  legislation_test_1.xml  legislation_test_2.xml  legislation_test_3.xml  legislation_test_4.xml  legislation_test_5.xml  legislation_test_6.xml  legislation_test_7.xml  legislation_test_8.xml  legislation_text_target.py
tools/: export_caselaw_complete.py  export_data.py  export_individual.py  export_to_parquet.py
(+166 files in other folders)
